<resources>
    <string name="app_name">Tres en Raya</string>
    <string name="un_jugador">1 jugador</string>
    <string name="dos_jugadores">2 jugadores</string>
    <string name="facil">Facil</string>
    <string name="normal">Normal</string>
    <string name="dificil">Dificil</string>
    <string name="casillas">Casilla</string>
    <string name="circulos_ganan">!Círculos ganan¡</string>
    <string name="aspas_ganan">!Aspas ganan¡</string>
    <string name="empate">!Empate¡</string>
</resources>
